{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Mouse",
            "id": "7957a6e0-0272-4c06-85be-b2f3c65c0ebe",
            "actions": [
                {
                    "name": "Mouse Delta",
                    "type": "PassThrough",
                    "id": "5ba3b3d7-7a79-4d15-bebe-b40c4acd7297",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "712dcaa2-2d21-4c4f-a4c8-21f8e7ddc921",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SingleButtonMash",
            "id": "76833813-b49c-4436-8842-acad1a300357",
            "actions": [
                {
                    "name": "Mash",
                    "type": "Button",
                    "id": "c440b2c6-b989-4ac9-b5a6-735d8a3ca5c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2480eae1-e1d3-49cd-808b-2e6a99a52742",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74e38882-e3dd-4d76-a24c-f70dfc548ee2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TimerQTE",
            "id": "93ee31c7-d1f1-40cd-b104-20a175c18289",
            "actions": [
                {
                    "name": "QTE_E",
                    "type": "Button",
                    "id": "d9f5c474-27ed-42f2-94be-3a84031f1b76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa30975c-7d52-470d-9308-2aafeadc7539",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QTE_E",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Buttons",
            "id": "e5f49b21-e3bf-4161-b42b-3d619643f898",
            "actions": [
                {
                    "name": "Button1",
                    "type": "Button",
                    "id": "4e706623-2ff8-485a-9788-a17206d070c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "30016451-1f13-460a-8eab-c0a1f04fa9a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a44e6365-c6af-4abe-ae07-bdc5c408653b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "481ca81f-4d91-4814-9d31-3b1aeceb35dc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Space",
            "id": "3436b5c0-f1c1-486e-af0c-915f63f72994",
            "actions": [
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "2202cf48-bc2d-4a9a-8807-4a93347971e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a01e97ef-711f-4840-98da-a0a0b789e76d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MultiButtonMash",
            "id": "480213d7-6eaa-4ef2-b441-6ef658736187",
            "actions": [
                {
                    "name": "Mash",
                    "type": "Button",
                    "id": "622571df-d7bf-4f3a-a1cc-389bba1c4859",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ebe12dca-da86-462e-bbe8-cf852adae87c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bf3c8b8d-95b4-49ac-a85a-8f28e5f005ad",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d51df416-8ee0-4b0a-ba66-d918c278564e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "StandardMovement",
            "id": "cbd146cd-8752-4bb6-821c-203424e03903",
            "actions": [
                {
                    "name": "HorizMove",
                    "type": "Button",
                    "id": "da7c358e-2e48-44b8-ad62-e5c7a08e1dce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VertMove",
                    "type": "Button",
                    "id": "09e2dafe-b289-4e34-acce-fd876dadd8dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8a82a05e-a890-4d10-b2a9-cb85e3b34017",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5d32ace2-dac5-4706-b273-0fcbf460c827",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "06557b55-2113-4ea1-be30-94d232be0e4f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58f7647a-a02c-4aa0-bacd-14e1c2f44d28",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2cb7327-977e-42ec-b2eb-a91412fe763f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cc1c3e55-4219-4cfd-8fb9-e5a62e082923",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4ab4d882-dcda-4acc-913e-de612fef8b24",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8bd32873-9039-4b2d-8eea-d59e42d140f6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ButtonSequenceInputs",
            "id": "00e7721e-2e5e-479c-a3d8-24c8b21f30da",
            "actions": [
                {
                    "name": "InputQ",
                    "type": "Button",
                    "id": "de59dc1b-1f66-4639-9d39-02056a14a62a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputW",
                    "type": "Button",
                    "id": "a48f9878-96a1-4bc2-9e66-26c60c89712d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputE",
                    "type": "Button",
                    "id": "a12a8d13-11f3-4d2f-9a13-7f346970719b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputA",
                    "type": "Button",
                    "id": "d6c6d723-7fba-4aa1-abe4-b8be2c61cf09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputS",
                    "type": "Button",
                    "id": "3aa871d5-0637-42df-ace7-fe3b47f1a489",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputD",
                    "type": "Button",
                    "id": "aa16a6b1-b74f-45aa-a7cf-c2a9015249e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa407225-37ca-4d9c-aaaa-9a2aabca6df5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c08f08e-f920-4381-8f9b-25a68dfc4d3a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "910bcf7f-66a0-4436-8259-8e52537c6a58",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b99962ea-5b33-4c9e-9040-bffb19ae9a94",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "050cbbc6-9d64-4613-8ea3-42f1673b6692",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "730c7bc5-dc33-4555-afa7-35710be61a9c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputA",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}